--- a/index.html
+++ b/index.html
@@ -5,13 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="shortcut icon" href="images/codenewbie.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo_engine_ss3.png" type="image/x-icon">
     <script src="menu.js" defer></script>
     <title>Portfólio</title>
 </head>
 <body>
     <header>
+        <!-- Menu Desktop -->
+        <div class="interface">
+            <div class="top-header">
+                <div class="img-header">
+                    <img src="images/logo_ss3.png" alt="">
+                </div>
+                <div class="btn-header">
+                    <a href="#"><Button><i class="bi bi-house-fill"></i></Button></a>
+                    <a href="#"><Button><i class="bi bi-search"></i></Button></a>
+                    <a href="#"><Button><i class="bi bi-whatsapp"></i></Button></a>
+                </div>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li class="drop-hover"><a href="#">PRODUTOS <i class="bi bi-caret-down-fill"></i></a>
+                        <div class="drop">
+                            <a href="#">DOWLIGHTS</a>
+                            <a href="#">PERFIS</a>
+                            <a href="#">DECORATIVOS</a>
+                        </div>
+                    </li>
+                    <li><a href="#">REVENDAS</a></li>
+                    <li><a href="#">SOBRE</a></li>
+                </ul>
+            </nav>
+        </div>
 
+        <!-- Menu Mobile -->
         <div class="btn-abrir-menu" id="btn-abrir-menu">
             <i class="bi bi-list"></i>
         </div>
@@ -33,8 +62,10 @@
             <div class="overlay-menu" id="overlay-menu"></div>
         </div> <!--interface-->
     </header>
+
     <main>
-        <h1>Teste</h1>
+        
+        <img src="images/logo_m3.png" alt="Logotipo Lone Wolf">
     </main>
 </body>
 </html>
