--- a/index.html
+++ b/index.html
@@ -12,36 +12,41 @@
 <body>
     <header>
         <!-- Menu Desktop -->
-        <div class="interface">
-            <div class="top-header">
-                <div class="img-header">
-                    <img src="images/logo_ss3.png" alt="">
+        <section class="top-header">
+            <div class="interface">
+                <div class="img-logo">
+                    <img src="images/logo_ss3.png" alt=" Logo Lone Wolf">
                 </div>
                 <div class="btn-header">
-                    <a href="#"><Button><i class="bi bi-house-fill"></i></Button></a>
-                    <a href="#"><Button><i class="bi bi-search"></i></Button></a>
-                    <a href="#"><Button><i class="bi bi-whatsapp"></i></Button></a>
+                    <button><a href="#"><i class="bi bi-house-fill"></i></a></button>
+                    <button><a href="#"><i class="bi bi-search"></i></a></button>
+                    <button><a href="#"><i class="bi bi-whatsapp"></i></a></button>
+
                 </div>
+            </div> <!-- interface -->
+        </section>
+        <section class="bottom-header">
+            <div class="interface">
+                <nav>
+                    <ul>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">BLOG</a></li>
+                        <li class="drop-hover"><a href="#">PRODUTOS <i class="bi bi-caret-down-fill"></i></a>
+                            <div class="drop">
+                                <a href="#">DOWLIGHTS</a>
+                                <a href="#">PERFIS</a>
+                                <a href="#">DECORATIVOS</a>
+                            </div>
+                        </li>
+                        <li><a href="#">REVENDAS</a></li>
+                        <li><a href="#">SOBRE</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">BLOG</a></li>
-                    <li class="drop-hover"><a href="#">PRODUTOS <i class="bi bi-caret-down-fill"></i></a>
-                        <div class="drop">
-                            <a href="#">DOWLIGHTS</a>
-                            <a href="#">PERFIS</a>
-                            <a href="#">DECORATIVOS</a>
-                        </div>
-                    </li>
-                    <li><a href="#">REVENDAS</a></li>
-                    <li><a href="#">SOBRE</a></li>
-                </ul>
-            </nav>
-        </div>
+        </section>
 
         <!-- Menu Mobile -->
-        <div class="btn-abrir-menu" id="btn-abrir-menu">
+        <!-- <div class="btn-abrir-menu" id="btn-abrir-menu">
             <i class="bi bi-list"></i>
         </div>
         <div class="interface">
@@ -58,14 +63,24 @@
                         <li><a href="#">Contato</a></li>
                     </ul>
                 </nav>
-            </div> <!--fim menu mobile-->
+            </div> <!--fim menu mobile
             <div class="overlay-menu" id="overlay-menu"></div>
-        </div> <!--interface-->
+        </div> interface -->
     </header>
 
     <main>
-        
-        <img src="images/logo_m3.png" alt="Logotipo Lone Wolf">
+        <div class="interface">
+            <section class="flex">
+                <div class="img-001">
+                    <img src="images/logo_m3.png" alt="Logotipo Lone Wolf">
+                </div>
+                <div class="txt-001">
+                    <h1>Quem somos.</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia facilis, nostrum, laboriosam tempore reprehenderit facere consectetur sapiente voluptas repudiandae fuga itaque sunt laudantium illo non corrupti praesentium. Voluptatem, fugiat quasi.</p>
+                </div>
+            </section>
+
+        </div>
     </main>
 </body>
 </html>
