--- a/index.html
+++ b/index.html
@@ -12,38 +12,27 @@
 <body>
     <header>
         <!-- Menu Desktop -->
-        <section class="top-header">
-            <div class="interface">
-                <div class="img-logo">
-                    <img src="images/logo_ss3.png" alt=" Logo Lone Wolf">
-                </div>
-                <div class="btn-header">
-                    <button><a href="#"><i class="bi bi-house-fill"></i></a></button>
-                    <button><a href="#"><i class="bi bi-search"></i></a></button>
-                    <button><a href="#"><i class="bi bi-whatsapp"></i></a></button>
-
-                </div>
-            </div> <!-- interface -->
-        </section>
-        <section class="bottom-header">
-            <div class="interface">
-                <nav>
-                    <ul>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">BLOG</a></li>
-                        <li class="drop-hover"><a href="#">PRODUTOS <i class="bi bi-caret-down-fill"></i></a>
-                            <div class="drop">
-                                <a href="#">DOWLIGHTS</a>
-                                <a href="#">PERFIS</a>
-                                <a href="#">DECORATIVOS</a>
-                            </div>
-                        </li>
-                        <li><a href="#">REVENDAS</a></li>
-                        <li><a href="#">SOBRE</a></li>
-                    </ul>
-                </nav>
+        <div class="interface">
+            <div class="logo-header">
+                <a href="#"><img src="images/logo_ss3.png" alt="Logo Lone Wolf"></a>
             </div>
-        </section>
+
+            <nav class="menu-desktop">
+                <ul>
+                    <li><a href="#">Iníco</a></li>
+                    <li><a href="#">Especialidades</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Projetos</a></li>
+                </ul>
+            </nav>
+
+            <div class="btn-contato">
+                <a href="#">
+                    <button>Contato</button>
+                </a>
+            </div>
+
+        </div> <!-- end interface -->
 
         <!-- Menu Mobile -->
         <!-- <div class="btn-abrir-menu" id="btn-abrir-menu">
@@ -69,18 +58,11 @@
     </header>
 
     <main>
-        <div class="interface">
-            <section class="flex">
-                <div class="img-001">
-                    <img src="images/logo_m3.png" alt="Logotipo Lone Wolf">
-                </div>
-                <div class="txt-001">
-                    <h1>Quem somos.</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia facilis, nostrum, laboriosam tempore reprehenderit facere consectetur sapiente voluptas repudiandae fuga itaque sunt laudantium illo non corrupti praesentium. Voluptatem, fugiat quasi.</p>
-                </div>
-            </section>
-
-        </div>
+        <section class="top-main">
+            <div class="interface">
+                
+            </div>        
+        </section>
     </main>
 </body>
 </html>
