--- a/index.html
+++ b/index.html
@@ -60,7 +60,22 @@
     <main>
         <section class="top-main">
             <div class="interface">
-                
+                <div class="flex">
+                    <div class="txt-top-main">
+                        <h1>CRIANDO SISTEMAS PERSONALIZADOS<span>.</span></h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In magni ad natus aliquam officiis debitis quas iste repudiandae quia, eum culpa soluta quam eligendi, ab voluptates dolores et enim odio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus aperiam placeat neque aut obcaecati dicta quia rerum autem similique repellendus aliquam, beatae architecto illum iure debitis magnam excepturi impedit suscipit.</p>
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>
+                                    Faça contato
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="img-top-main">
+                        <img src="images/henquebsb.JPG" alt="">
+                    </div>
+                </div>
             </div>        
         </section>
     </main>
