--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="img-top-main">
-                        <img src="images/henquebsb.JPG" alt="">
+                        <img src="images/logo_engine_m3.png" alt="">
                     </div>
                 </div>
             </div>        
